fix: more readable blobs on datadrevet. smaller font on small devices on bottomtext

--- a/src/tjenesteomrader/shared/bottomText.module.css
+++ b/src/tjenesteomrader/shared/bottomText.module.css
@@ -38,6 +38,9 @@
   .bottomText__content {
     padding-inline: 3rem;
   }
+  .bottomText__content_bigText {
+    font-size: 1.25rem;
+  }
 }
 
 @media (min-width: 2000px) {
